--- a/Exams/Midterm_Exam/Practice_Midterm_Exam.ipynb
+++ b/Exams/Midterm_Exam/Practice_Midterm_Exam.ipynb
@@ -19,8 +19,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.331257Z",
-     "start_time": "2024-10-23T10:42:48.328606Z"
+     "end_time": "2024-10-23T10:54:37.120678Z",
+     "start_time": "2024-10-23T10:54:37.118168Z"
     }
    },
    "cell_type": "code",
@@ -31,7 +31,7 @@
    ],
    "id": "f9fef3ad59a3127b",
    "outputs": [],
-   "execution_count": 156
+   "execution_count": 192
   },
   {
    "metadata": {},
@@ -84,15 +84,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.347093Z",
-     "start_time": "2024-10-23T10:42:48.333263Z"
+     "end_time": "2024-10-23T10:54:37.161410Z",
+     "start_time": "2024-10-23T10:54:37.145655Z"
     }
    },
    "cell_type": "code",
    "source": "np_trails = pd.read_csv(\"Data/national_park_trails.csv\")",
    "id": "bff84b59532674e5",
    "outputs": [],
-   "execution_count": 157
+   "execution_count": 193
   },
   {
    "metadata": {},
@@ -120,8 +120,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.382442Z",
-     "start_time": "2024-10-23T10:42:48.374273Z"
+     "end_time": "2024-10-23T10:54:37.190941Z",
+     "start_time": "2024-10-23T10:54:37.182381Z"
     }
    },
    "cell_type": "code",
@@ -323,18 +323,18 @@
        "</div>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 158
+   "execution_count": 194
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.432976Z",
-     "start_time": "2024-10-23T10:42:48.426571Z"
+     "end_time": "2024-10-23T10:54:37.249408Z",
+     "start_time": "2024-10-23T10:54:37.241896Z"
     }
    },
    "cell_type": "code",
@@ -380,12 +380,12 @@
        "Name: 835, dtype: object"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 159
+   "execution_count": 195
   },
   {
    "metadata": {},
@@ -402,8 +402,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.479955Z",
-     "start_time": "2024-10-23T10:42:48.474446Z"
+     "end_time": "2024-10-23T10:54:37.311476Z",
+     "start_time": "2024-10-23T10:54:37.305144Z"
     }
    },
    "cell_type": "code",
@@ -421,12 +421,12 @@
        "Name: avg_rating, dtype: float64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 160
+   "execution_count": 196
   },
   {
    "metadata": {},
@@ -441,8 +441,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.605821Z",
-     "start_time": "2024-10-23T10:42:48.600312Z"
+     "end_time": "2024-10-23T10:54:37.509064Z",
+     "start_time": "2024-10-23T10:54:37.504235Z"
     }
    },
    "cell_type": "code",
@@ -458,18 +458,18 @@
        "109"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 161
+   "execution_count": 197
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.701460Z",
-     "start_time": "2024-10-23T10:42:48.695778Z"
+     "end_time": "2024-10-23T10:54:37.650876Z",
+     "start_time": "2024-10-23T10:54:37.643333Z"
     }
    },
    "cell_type": "code",
@@ -489,12 +489,12 @@
        "109"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 162
+   "execution_count": 198
   },
   {
    "metadata": {},
@@ -515,8 +515,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:48.846437Z",
-     "start_time": "2024-10-23T10:42:48.839025Z"
+     "end_time": "2024-10-23T10:54:37.741302Z",
+     "start_time": "2024-10-23T10:54:37.734951Z"
     }
    },
    "cell_type": "code",
@@ -599,18 +599,18 @@
        "</div>"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 163
+   "execution_count": 199
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:49.519580Z",
-     "start_time": "2024-10-23T10:42:48.873021Z"
+     "end_time": "2024-10-23T10:54:38.366686Z",
+     "start_time": "2024-10-23T10:54:37.786757Z"
     }
    },
    "cell_type": "code",
@@ -653,12 +653,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 164
+   "execution_count": 200
   },
   {
    "metadata": {},
@@ -674,8 +674,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:49.893372Z",
-     "start_time": "2024-10-23T10:42:49.541633Z"
+     "end_time": "2024-10-23T10:54:38.761623Z",
+     "start_time": "2024-10-23T10:54:38.401238Z"
     }
    },
    "cell_type": "code",
@@ -728,12 +728,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 165
+   "execution_count": 201
   },
   {
    "metadata": {},
@@ -745,11 +745,11 @@
     "### Question 2.1 [30 points]\n",
     "Write a functions to help recommend trails to a user. The function will have as its input the dataset and the name of a National Park, and the following optional arguments:\n",
     "\n",
-    "A minimum trail elevation gain (in meters)\n",
-    "A maximum trail elevation gain (in meters)\n",
-    "A minimum trail rating\n",
-    "The type of trail\n",
-    "(Note: “optional” here means that the function can run even if the user doesn’t supply these arguments, not that they are optional for you to include in your function definition.)\n",
+    "        A minimum trail elevation gain (in meters)\n",
+    "        A maximum trail elevation gain (in meters)\n",
+    "        A minimum trail rating\n",
+    "        The type of trail\n",
+    "        (Note: “optional” here means that the function can run even if the user doesn’t supply these arguments, not that they are optional for you to include in your function definition.)\n",
     "\n",
     "The function should return all the trails that fit the supplied criteria. You may assume that the variable names of any inputted dataset match the np_trails dataset.\n",
     "\n",
@@ -771,6 +771,191 @@
     "recommend_trails(np_trails, \"Haleakala National Park\", min_elev = 1000, min_rating = 4)"
    ],
    "id": "ed0bd8a70bb77902"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T10:54:38.789877Z",
+     "start_time": "2024-10-23T10:54:38.778836Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def recommend_trails(dataset, park_name=None, min_elev=None, max_elev=None, min_rating=None, trail_type=None):\n",
+    "    # Set default values if not provided by the user\n",
+    "    if min_elev is None:\n",
+    "        min_elev = 0  # Minimum elevation gain is 0 if not provided\n",
+    "    if max_elev is None:\n",
+    "        max_elev = float('inf')  # Maximum elevation gain is infinite if not provided\n",
+    "    if min_rating is None:\n",
+    "        min_rating = 0  # Minimum rating is 0 if not provided\n",
+    "    if park_name is None:\n",
+    "        park_name = dataset['area_name'].unique()  # Default to all trail types if not provided\n",
+    "    if trail_type is None:\n",
+    "        trail_type = dataset['route_type'].unique()  # Default to all trail types if not provided\n",
+    "    \n",
+    "    # Filter the dataset based on the provided criteria\n",
+    "    filtered_trails = dataset[\n",
+    "        (dataset['area_name'].isin([park_name]) if isinstance(park_name, str) else True) &  # Match the National Park\n",
+    "        (dataset['elevation_gain'] >= min_elev) &  # Minimum elevation gain\n",
+    "        (dataset['elevation_gain'] <= max_elev) &  # Maximum elevation gain\n",
+    "        (dataset['avg_rating'] >= min_rating) &  # Minimum trail rating\n",
+    "        (dataset['route_type'].isin([trail_type]) if isinstance(trail_type, str) else True)  # Match trail type if provided\n",
+    "    ]\n",
+    "    \n",
+    "    return filtered_trails\n",
+    "\n",
+    "recommend_trails(np_trails, \"Haleakala National Park\", min_elev = 1000, min_rating = 4)"
+   ],
+   "id": "488aa8dfd1030519",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      trail_id                                  name                area_name  \\\n",
+       "3308  10008302  Silversword Loop Via Halemau'u Trail  Haleakala National Park   \n",
+       "3309  10236001                   Keonehe'ehe'e Trail  Haleakala National Park   \n",
+       "3311  10014989                           Kaupo Trail  Haleakala National Park   \n",
+       "\n",
+       "     city_name state_name country_name  \\\n",
+       "3308      Kula       Maui       Hawaii   \n",
+       "3309      Kula       Maui       Hawaii   \n",
+       "3311      Kula       Maui       Hawaii   \n",
+       "\n",
+       "                                             _geoloc  popularity     length  \\\n",
+       "3308            {'lat': 20.75275, 'lng': -156.22884}      9.3861  20116.750   \n",
+       "3309  {'lat': 20.714480000000002, 'lng': -156.25072}      9.1555  28324.384   \n",
+       "3311              {'lat': 20.64981, 'lng': -156.137}      8.3240  19312.080   \n",
+       "\n",
+       "      elevation_gain  difficulty_rating    route_type  visitor_usage  \\\n",
+       "3308       1105.8144                  5          loop            2.0   \n",
+       "3309       1171.9560                  5  out and back            2.0   \n",
+       "3311       1670.9136                  5  out and back            1.0   \n",
+       "\n",
+       "      avg_rating  num_reviews                              features  \\\n",
+       "3308         4.5           43  ['dogs-no', 'views', 'wild-flowers']   \n",
+       "3309         5.0           22      ['dogs-no', 'views', 'wildlife']   \n",
+       "3311         4.0            8      ['dogs-no', 'views', 'wildlife']   \n",
+       "\n",
+       "                                 activities units  \n",
+       "3308  ['birding', 'hiking', 'nature-trips']     m  \n",
+       "3309   ['backpacking', 'camping', 'hiking']     m  \n",
+       "3311                             ['hiking']     m  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trail_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>area_name</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>state_name</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>_geoloc</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>length</th>\n",
+       "      <th>elevation_gain</th>\n",
+       "      <th>difficulty_rating</th>\n",
+       "      <th>route_type</th>\n",
+       "      <th>visitor_usage</th>\n",
+       "      <th>avg_rating</th>\n",
+       "      <th>num_reviews</th>\n",
+       "      <th>features</th>\n",
+       "      <th>activities</th>\n",
+       "      <th>units</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3308</th>\n",
+       "      <td>10008302</td>\n",
+       "      <td>Silversword Loop Via Halemau'u Trail</td>\n",
+       "      <td>Haleakala National Park</td>\n",
+       "      <td>Kula</td>\n",
+       "      <td>Maui</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>{'lat': 20.75275, 'lng': -156.22884}</td>\n",
+       "      <td>9.3861</td>\n",
+       "      <td>20116.750</td>\n",
+       "      <td>1105.8144</td>\n",
+       "      <td>5</td>\n",
+       "      <td>loop</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>43</td>\n",
+       "      <td>['dogs-no', 'views', 'wild-flowers']</td>\n",
+       "      <td>['birding', 'hiking', 'nature-trips']</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3309</th>\n",
+       "      <td>10236001</td>\n",
+       "      <td>Keonehe'ehe'e Trail</td>\n",
+       "      <td>Haleakala National Park</td>\n",
+       "      <td>Kula</td>\n",
+       "      <td>Maui</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>{'lat': 20.714480000000002, 'lng': -156.25072}</td>\n",
+       "      <td>9.1555</td>\n",
+       "      <td>28324.384</td>\n",
+       "      <td>1171.9560</td>\n",
+       "      <td>5</td>\n",
+       "      <td>out and back</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>['dogs-no', 'views', 'wildlife']</td>\n",
+       "      <td>['backpacking', 'camping', 'hiking']</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3311</th>\n",
+       "      <td>10014989</td>\n",
+       "      <td>Kaupo Trail</td>\n",
+       "      <td>Haleakala National Park</td>\n",
+       "      <td>Kula</td>\n",
+       "      <td>Maui</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>{'lat': 20.64981, 'lng': -156.137}</td>\n",
+       "      <td>8.3240</td>\n",
+       "      <td>19312.080</td>\n",
+       "      <td>1670.9136</td>\n",
+       "      <td>5</td>\n",
+       "      <td>out and back</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>['dogs-no', 'views', 'wildlife']</td>\n",
+       "      <td>['hiking']</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 202
   },
   {
    "metadata": {},
@@ -811,8 +996,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:50.186640Z",
-     "start_time": "2024-10-23T10:42:49.909898Z"
+     "end_time": "2024-10-23T10:54:39.111386Z",
+     "start_time": "2024-10-23T10:54:38.828199Z"
     }
    },
    "cell_type": "code",
@@ -1294,12 +1479,12 @@
        "</div>"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 166
+   "execution_count": 203
   },
   {
    "metadata": {},
@@ -1332,25 +1517,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:50.240018Z",
-     "start_time": "2024-10-23T10:42:50.228995Z"
+     "end_time": "2024-10-23T10:54:39.155543Z",
+     "start_time": "2024-10-23T10:54:39.145612Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def recommend_trails(trails_df, elevation_min = 0, elevation_max = np.inf, min_rating = 0, route_type = \"loop\"):\n",
-    "    # Filter trails by the given criteria\n",
-    "    filtered_trails = trails_df[\n",
-    "        (trails_df['elevation_gain'] >= elevation_min) &\n",
-    "        (trails_df['elevation_gain'] <= elevation_max) &\n",
-    "        (trails_df['avg_rating'] >= min_rating) &\n",
-    "        (trails_df['route_type'] == route_type)\n",
-    "    ]\n",
-    "    \n",
-    "    return filtered_trails\n",
-    "\n",
     "# Example usage of recommend_trails\n",
-    "recommended_trails = recommend_trails(np_trails, elevation_min = 1000, elevation_max = 3000, min_rating = 4.5, route_type = \"loop\")\n",
+    "recommended_trails = recommend_trails(np_trails, min_elev = 1000, max_elev = 3000, min_rating = 4.5, trail_type = \"loop\")\n",
     "recommended_trails"
    ],
    "id": "d979d05479a20b35",
@@ -1728,31 +1902,31 @@
        "</div>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 167
+   "execution_count": 204
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:50.281060Z",
-     "start_time": "2024-10-23T10:42:50.277857Z"
+     "end_time": "2024-10-23T10:54:39.229876Z",
+     "start_time": "2024-10-23T10:54:39.225867Z"
     }
    },
    "cell_type": "code",
    "source": "states = recommended_trails[\"state_name\"].value_counts().index.to_list()",
    "id": "d8e6ebb1e70bc9aa",
    "outputs": [],
-   "execution_count": 168
+   "execution_count": 205
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:51.460134Z",
-     "start_time": "2024-10-23T10:42:50.326733Z"
+     "end_time": "2024-10-23T10:54:40.398429Z",
+     "start_time": "2024-10-23T10:54:39.315652Z"
     }
    },
    "cell_type": "code",
@@ -1799,18 +1973,18 @@
        "Name: avg_summer_temp, dtype: float64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 169
+   "execution_count": 206
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:51.482962Z",
-     "start_time": "2024-10-23T10:42:51.478117Z"
+     "end_time": "2024-10-23T10:54:40.420916Z",
+     "start_time": "2024-10-23T10:54:40.416232Z"
     }
    },
    "cell_type": "code",
@@ -1832,13 +2006,13 @@
    ],
    "id": "ac28c0f09bbb6697",
    "outputs": [],
-   "execution_count": 170
+   "execution_count": 207
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T10:42:51.523406Z",
-     "start_time": "2024-10-23T10:42:51.513064Z"
+     "end_time": "2024-10-23T10:54:40.460517Z",
+     "start_time": "2024-10-23T10:54:40.449970Z"
     }
    },
    "cell_type": "code",
@@ -2255,12 +2429,12 @@
        "</div>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 171
+   "execution_count": 208
   },
   {
    "metadata": {},
