Whoops I forgot to push a bunch of stuff

--- a/Labs/Lab04/Lab04.ipynb
+++ b/Labs/Lab04/Lab04.ipynb
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:23.078832Z",
-     "start_time": "2024-10-30T05:35:22.312047Z"
+     "end_time": "2024-10-30T05:37:49.001097Z",
+     "start_time": "2024-10-30T05:37:48.998714Z"
     }
    },
    "cell_type": "code",
@@ -46,7 +46,7 @@
    ],
    "id": "fe4c858ed408c0f0",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 61
   },
   {
    "metadata": {},
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:23.253996Z",
-     "start_time": "2024-10-30T05:35:23.100356Z"
+     "end_time": "2024-10-30T05:37:49.123565Z",
+     "start_time": "2024-10-30T05:37:49.026652Z"
     }
    },
    "cell_type": "code",
@@ -187,18 +187,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 62
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:23.508026Z",
-     "start_time": "2024-10-30T05:35:23.396723Z"
+     "end_time": "2024-10-30T05:37:49.261173Z",
+     "start_time": "2024-10-30T05:37:49.147159Z"
     }
    },
    "cell_type": "code",
@@ -304,18 +304,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:23.584267Z",
-     "start_time": "2024-10-30T05:35:23.575148Z"
+     "end_time": "2024-10-30T05:37:49.501464Z",
+     "start_time": "2024-10-30T05:37:49.492161Z"
     }
    },
    "cell_type": "code",
@@ -413,12 +413,12 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 64
   },
   {
    "metadata": {},
@@ -444,8 +444,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:23.995749Z",
-     "start_time": "2024-10-30T05:35:23.732779Z"
+     "end_time": "2024-10-30T05:37:49.744982Z",
+     "start_time": "2024-10-30T05:37:49.611799Z"
     }
    },
    "cell_type": "code",
@@ -539,18 +539,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:24.037457Z",
-     "start_time": "2024-10-30T05:35:24.031451Z"
+     "end_time": "2024-10-30T05:37:49.804641Z",
+     "start_time": "2024-10-30T05:37:49.797319Z"
     }
    },
    "cell_type": "code",
@@ -644,18 +644,18 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 66
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Part 5\n",
+    "### Part 5:\n",
     "\n",
     "Sources:\n",
     "\n",
@@ -670,8 +670,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:24.217786Z",
-     "start_time": "2024-10-30T05:35:24.214515Z"
+     "end_time": "2024-10-30T05:37:49.900858Z",
+     "start_time": "2024-10-30T05:37:49.898080Z"
     }
    },
    "cell_type": "code",
@@ -681,13 +681,13 @@
    ],
    "id": "afa4edcefc2cfb52",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:24.760924Z",
-     "start_time": "2024-10-30T05:35:24.324145Z"
+     "end_time": "2024-10-30T05:37:50.403501Z",
+     "start_time": "2024-10-30T05:37:50.001985Z"
     }
    },
    "cell_type": "code",
@@ -788,18 +788,18 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:25.190993Z",
-     "start_time": "2024-10-30T05:35:24.783333Z"
+     "end_time": "2024-10-30T05:37:50.818896Z",
+     "start_time": "2024-10-30T05:37:50.421718Z"
     }
    },
    "cell_type": "code",
@@ -916,18 +916,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:25.258141Z",
-     "start_time": "2024-10-30T05:35:25.253402Z"
+     "end_time": "2024-10-30T05:37:50.857749Z",
+     "start_time": "2024-10-30T05:37:50.852171Z"
     }
    },
    "cell_type": "code",
@@ -1008,18 +1008,18 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:25.403633Z",
-     "start_time": "2024-10-30T05:35:25.396465Z"
+     "end_time": "2024-10-30T05:37:50.927884Z",
+     "start_time": "2024-10-30T05:37:50.921637Z"
     }
    },
    "cell_type": "code",
@@ -1125,24 +1125,24 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 71
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Part 7",
+   "source": "### Part 6:",
    "id": "c06d9268e7006652"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:25.554624Z",
-     "start_time": "2024-10-30T05:35:25.546726Z"
+     "end_time": "2024-10-30T05:37:51.049105Z",
+     "start_time": "2024-10-30T05:37:51.041424Z"
     }
    },
    "cell_type": "code",
@@ -1280,18 +1280,19 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 72
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
     "## Analyze\n",
+    "\n",
     "---\n",
     "\n",
     "7. Assess and comment on the prevalence of each chain. Some questions to consider (you don’t need to answer all of these and you may come up with your own):\n",
@@ -1309,8 +1310,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:26.753833Z",
-     "start_time": "2024-10-30T05:35:25.731981Z"
+     "end_time": "2024-10-30T05:37:51.346496Z",
+     "start_time": "2024-10-30T05:37:51.190832Z"
     }
    },
    "cell_type": "code",
@@ -1372,18 +1373,18 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:26.938407Z",
-     "start_time": "2024-10-30T05:35:26.784874Z"
+     "end_time": "2024-10-30T05:37:51.555792Z",
+     "start_time": "2024-10-30T05:37:51.419557Z"
     }
    },
    "cell_type": "code",
@@ -1412,18 +1413,18 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:27.356860Z",
-     "start_time": "2024-10-30T05:35:26.953245Z"
+     "end_time": "2024-10-30T05:37:52.118707Z",
+     "start_time": "2024-10-30T05:37:51.568310Z"
     }
    },
    "cell_type": "code",
@@ -1452,12 +1453,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 75
   },
   {
    "metadata": {},
@@ -1476,8 +1477,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:28.141388Z",
-     "start_time": "2024-10-30T05:35:28.132117Z"
+     "end_time": "2024-10-30T05:37:53.008594Z",
+     "start_time": "2024-10-30T05:37:52.998300Z"
     }
    },
    "cell_type": "code",
@@ -1580,18 +1581,18 @@
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 76
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:28.963675Z",
-     "start_time": "2024-10-30T05:35:28.827163Z"
+     "end_time": "2024-10-30T05:37:53.866661Z",
+     "start_time": "2024-10-30T05:37:53.724984Z"
     }
    },
    "cell_type": "code",
@@ -1628,12 +1629,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 77
   },
   {
    "metadata": {},
@@ -1669,8 +1670,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:28.987140Z",
-     "start_time": "2024-10-30T05:35:28.982889Z"
+     "end_time": "2024-10-30T05:37:53.890256Z",
+     "start_time": "2024-10-30T05:37:53.886257Z"
     }
    },
    "cell_type": "code",
@@ -1735,7 +1736,7 @@
    ],
    "id": "2772edb9d1d2ef45",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 78
   },
   {
    "metadata": {},
@@ -1749,21 +1750,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:29.054413Z",
-     "start_time": "2024-10-30T05:35:29.050983Z"
+     "end_time": "2024-10-30T05:37:53.926546Z",
+     "start_time": "2024-10-30T05:37:53.924195Z"
     }
    },
    "cell_type": "code",
    "source": "url = \"https://worldpopulationreview.com/state-rankings/chick-fil-a-by-state\"",
    "id": "3fcbdb2bd58a9de7",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 79
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:35:30.045218Z",
-     "start_time": "2024-10-30T05:35:29.922299Z"
+     "end_time": "2024-10-30T05:37:55.243622Z",
+     "start_time": "2024-10-30T05:37:54.896118Z"
     }
    },
    "cell_type": "code",
@@ -1900,12 +1901,12 @@
        "</div>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 80
   }
  ],
  "metadata": {
