--- a/Labs/Lab04/Lab04.ipynb
+++ b/Labs/Lab04/Lab04.ipynb
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.001097Z",
-     "start_time": "2024-10-30T05:37:48.998714Z"
+     "end_time": "2024-10-30T06:45:14.525777Z",
+     "start_time": "2024-10-30T06:45:14.522313Z"
     }
    },
    "cell_type": "code",
@@ -46,7 +46,7 @@
    ],
    "id": "fe4c858ed408c0f0",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 81
   },
   {
    "metadata": {},
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.123565Z",
-     "start_time": "2024-10-30T05:37:49.026652Z"
+     "end_time": "2024-10-30T06:45:15.630939Z",
+     "start_time": "2024-10-30T06:45:15.495413Z"
     }
    },
    "cell_type": "code",
@@ -187,18 +187,18 @@
        "</div>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 62
+   "execution_count": 82
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.261173Z",
-     "start_time": "2024-10-30T05:37:49.147159Z"
+     "end_time": "2024-10-30T06:45:15.755088Z",
+     "start_time": "2024-10-30T06:45:15.651821Z"
     }
    },
    "cell_type": "code",
@@ -304,18 +304,18 @@
        "</div>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 63
+   "execution_count": 83
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.501464Z",
-     "start_time": "2024-10-30T05:37:49.492161Z"
+     "end_time": "2024-10-30T06:45:15.799971Z",
+     "start_time": "2024-10-30T06:45:15.791895Z"
     }
    },
    "cell_type": "code",
@@ -413,12 +413,12 @@
        "</div>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 84
   },
   {
    "metadata": {},
@@ -444,8 +444,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.744982Z",
-     "start_time": "2024-10-30T05:37:49.611799Z"
+     "end_time": "2024-10-30T06:45:16.072349Z",
+     "start_time": "2024-10-30T06:45:15.874700Z"
     }
    },
    "cell_type": "code",
@@ -539,18 +539,18 @@
        "</div>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 65
+   "execution_count": 85
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.804641Z",
-     "start_time": "2024-10-30T05:37:49.797319Z"
+     "end_time": "2024-10-30T06:45:16.143038Z",
+     "start_time": "2024-10-30T06:45:16.136304Z"
     }
    },
    "cell_type": "code",
@@ -644,12 +644,12 @@
        "</div>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 66
+   "execution_count": 86
   },
   {
    "metadata": {},
@@ -670,8 +670,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:49.900858Z",
-     "start_time": "2024-10-30T05:37:49.898080Z"
+     "end_time": "2024-10-30T06:45:16.235201Z",
+     "start_time": "2024-10-30T06:45:16.232186Z"
     }
    },
    "cell_type": "code",
@@ -681,13 +681,13 @@
    ],
    "id": "afa4edcefc2cfb52",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 87
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:50.403501Z",
-     "start_time": "2024-10-30T05:37:50.001985Z"
+     "end_time": "2024-10-30T06:45:16.790313Z",
+     "start_time": "2024-10-30T06:45:16.344256Z"
     }
    },
    "cell_type": "code",
@@ -788,18 +788,18 @@
        "</div>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 88
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:50.818896Z",
-     "start_time": "2024-10-30T05:37:50.421718Z"
+     "end_time": "2024-10-30T06:45:17.211744Z",
+     "start_time": "2024-10-30T06:45:16.809889Z"
     }
    },
    "cell_type": "code",
@@ -916,18 +916,18 @@
        "</div>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 89
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:50.857749Z",
-     "start_time": "2024-10-30T05:37:50.852171Z"
+     "end_time": "2024-10-30T06:45:17.258170Z",
+     "start_time": "2024-10-30T06:45:17.252565Z"
     }
    },
    "cell_type": "code",
@@ -1008,18 +1008,18 @@
        "</div>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 90
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:50.927884Z",
-     "start_time": "2024-10-30T05:37:50.921637Z"
+     "end_time": "2024-10-30T06:45:17.349053Z",
+     "start_time": "2024-10-30T06:45:17.341223Z"
     }
    },
    "cell_type": "code",
@@ -1125,12 +1125,12 @@
        "</div>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 91
   },
   {
    "metadata": {},
@@ -1141,8 +1141,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:51.049105Z",
-     "start_time": "2024-10-30T05:37:51.041424Z"
+     "end_time": "2024-10-30T06:45:17.490646Z",
+     "start_time": "2024-10-30T06:45:17.482759Z"
     }
    },
    "cell_type": "code",
@@ -1280,12 +1280,12 @@
        "</div>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 92
   },
   {
    "metadata": {},
@@ -1310,8 +1310,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:51.346496Z",
-     "start_time": "2024-10-30T05:37:51.190832Z"
+     "end_time": "2024-10-30T06:45:17.775916Z",
+     "start_time": "2024-10-30T06:45:17.608476Z"
     }
    },
    "cell_type": "code",
@@ -1373,18 +1373,18 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 73
+   "execution_count": 93
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:51.555792Z",
-     "start_time": "2024-10-30T05:37:51.419557Z"
+     "end_time": "2024-10-30T06:45:17.965843Z",
+     "start_time": "2024-10-30T06:45:17.834796Z"
     }
    },
    "cell_type": "code",
@@ -1413,18 +1413,18 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 74
+   "execution_count": 94
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:52.118707Z",
-     "start_time": "2024-10-30T05:37:51.568310Z"
+     "end_time": "2024-10-30T06:45:18.715292Z",
+     "start_time": "2024-10-30T06:45:17.979852Z"
     }
    },
    "cell_type": "code",
@@ -1453,12 +1453,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 95
   },
   {
    "metadata": {},
@@ -1470,15 +1470,15 @@
     "\n",
     "The faceted chart depicting store counts by state within each region further reinforces these regional patterns. In the Northeast, Dunkin' Donuts dominates states like Massachusetts and New York, outnumbering Starbucks significantly. This contrasts with the West, where Starbucks has a significant lead, especially in California, indicating a more widespread acceptance and brand penetration in this region. This chart also highlights Dunkin's relatively minimal presence in the Western states, reflecting the company’s more localized strategy centered around the Eastern U.S. In the South, both chains show a moderate presence, although Starbucks remains the more dominant brand overall in states like Florida.\n",
     "\n",
-    "These findings suggest that while Starbucks has achieved a more uniform national presence, Dunkin's strategy has been highly concentrated in the Northeast. Starbucks’ broader store distribution aligns with its appeal to various urban and suburban markets across the country. In contrast, Dunkin's higher store density in smaller, more densely populated states in the Northeast indicates a strong regional loyalty, likely fostered by the brand’s origins and historical focus on this area. This difference in distribution strategy highlights each chain’s approach to balancing presence with regional customer demand and demographic preferences."
+    "These findings suggest that while Starbucks has achieved a more uniform national presence, Dunkin's strategy has been highly concentrated in the Northeast. Starbucks’ broader store distribution aligns with its appeal to various urban and suburban markets across the country. In contrast, Dunkin's higher store density in smaller, more densely populated states in the Northeast indicates a strong regional loyalty, likely fostered by the brand’s origins and historical focus on this area. "
    ],
    "id": "c929e75f05575bba"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:53.008594Z",
-     "start_time": "2024-10-30T05:37:52.998300Z"
+     "end_time": "2024-10-30T06:45:20.163590Z",
+     "start_time": "2024-10-30T06:45:20.153595Z"
     }
    },
    "cell_type": "code",
@@ -1581,18 +1581,18 @@
        "</div>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 76
+   "execution_count": 96
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:53.866661Z",
-     "start_time": "2024-10-30T05:37:53.724984Z"
+     "end_time": "2024-10-30T06:45:20.317410Z",
+     "start_time": "2024-10-30T06:45:20.181612Z"
     }
    },
    "cell_type": "code",
@@ -1629,12 +1629,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 77
+   "execution_count": 97
   },
   {
    "metadata": {},
@@ -1670,8 +1670,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:53.890256Z",
-     "start_time": "2024-10-30T05:37:53.886257Z"
+     "end_time": "2024-10-30T06:45:20.340564Z",
+     "start_time": "2024-10-30T06:45:20.336583Z"
     }
    },
    "cell_type": "code",
@@ -1704,7 +1704,7 @@
     "        state_name = row.find(\"th\").get_text(strip=True)\n",
     "        columns = row.find_all(\"td\")\n",
     "        \n",
-    "        # Collect store counts for the dynamically identified years\n",
+    "        # Collect store counts for the identified years\n",
     "        row_data = [state_name]  # Start with the state name\n",
     "        for i in range(len(years)):\n",
     "            # Add store data if column exists, otherwise append None\n",
@@ -1713,7 +1713,7 @@
     "        \n",
     "        rows.append(row_data)\n",
     "\n",
-    "    # Define column names: \"State\" + dynamically identified years\n",
+    "    # Define column names: \"State\" +  years\n",
     "    column_names = [\"State\"] + years\n",
     "    \n",
     "    # Convert to DataFrame\n",
@@ -1736,7 +1736,7 @@
    ],
    "id": "2772edb9d1d2ef45",
    "outputs": [],
-   "execution_count": 78
+   "execution_count": 98
   },
   {
    "metadata": {},
@@ -1750,21 +1750,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:53.926546Z",
-     "start_time": "2024-10-30T05:37:53.924195Z"
+     "end_time": "2024-10-30T06:45:20.369106Z",
+     "start_time": "2024-10-30T06:45:20.367108Z"
     }
    },
    "cell_type": "code",
    "source": "url = \"https://worldpopulationreview.com/state-rankings/chick-fil-a-by-state\"",
    "id": "3fcbdb2bd58a9de7",
    "outputs": [],
-   "execution_count": 79
+   "execution_count": 99
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T05:37:55.243622Z",
-     "start_time": "2024-10-30T05:37:54.896118Z"
+     "end_time": "2024-10-30T06:45:21.474803Z",
+     "start_time": "2024-10-30T06:45:21.359984Z"
     }
    },
    "cell_type": "code",
@@ -1901,12 +1901,12 @@
        "</div>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 80
+   "execution_count": 100
   }
  ],
  "metadata": {
