--- a/Practice_Activities/Practice_Activity_5.2/Practice_Activity_Multiple_Linear_Regression_and_Evaluation.ipynb
+++ b/Practice_Activities/Practice_Activity_5.2/Practice_Activity_Multiple_Linear_Regression_and_Evaluation.ipynb
@@ -16,6 +16,21 @@
  },
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "raw",
+   "source": [
+    "---\n",
+    "title: 'Practice Activity 5.2: Multiple Linear Regression and Evaluation'\n",
+    "author: 'Isabella McCarty'\n",
+    "embed-resources: true\n",
+    "format: \n",
+    "    html:\n",
+    "        code-fold: true\n",
+    "        theme: minty\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Palmer Penguins Modeling\n",
@@ -35,8 +50,8 @@
    "metadata": {
     "id": "N5lG475yllju",
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:45:38.799721Z",
-     "start_time": "2024-11-02T05:45:38.791978Z"
+     "end_time": "2024-11-02T05:47:10.448427Z",
+     "start_time": "2024-11-02T05:47:10.439358Z"
     }
    },
    "source": [
@@ -166,18 +181,18 @@
        "</div>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:45:38.910472Z",
-     "start_time": "2024-11-02T05:45:38.899604Z"
+     "end_time": "2024-11-02T05:47:10.477860Z",
+     "start_time": "2024-11-02T05:47:10.467143Z"
     }
    },
    "cell_type": "code",
@@ -333,12 +348,12 @@
        "</div>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -410,19 +425,19 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:45:38.966614Z",
-     "start_time": "2024-11-02T05:45:38.949772Z"
+     "end_time": "2024-11-02T05:47:10.535818Z",
+     "start_time": "2024-11-02T05:47:10.519265Z"
     }
    },
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 27
   },
   {
    "metadata": {
     "id": "M6f7JWZTm6tn",
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:45:39.149807Z",
-     "start_time": "2024-11-02T05:45:39.010455Z"
+     "end_time": "2024-11-02T05:47:10.710331Z",
+     "start_time": "2024-11-02T05:47:10.569691Z"
     }
    },
    "cell_type": "code",
@@ -460,12 +475,12 @@
        "<Figure Size: (640 x 480)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 28
   },
   {
    "metadata": {},
