--- a/Practice_Activities/Practice_Activity_5.2/Practice_Activity_Multiple_Linear_Regression_and_Evaluation.ipynb
+++ b/Practice_Activities/Practice_Activity_5.2/Practice_Activity_Multiple_Linear_Regression_and_Evaluation.ipynb
@@ -50,8 +50,8 @@
    "metadata": {
     "id": "N5lG475yllju",
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:47:10.448427Z",
-     "start_time": "2024-11-02T05:47:10.439358Z"
+     "end_time": "2024-11-02T05:50:51.576345Z",
+     "start_time": "2024-11-02T05:50:51.567862Z"
     }
    },
    "source": [
@@ -181,18 +181,18 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:47:10.477860Z",
-     "start_time": "2024-11-02T05:47:10.467143Z"
+     "end_time": "2024-11-02T05:50:51.610713Z",
+     "start_time": "2024-11-02T05:50:51.599987Z"
     }
    },
    "cell_type": "code",
@@ -348,12 +348,12 @@
        "</div>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 42
   },
   {
    "cell_type": "markdown",
@@ -425,24 +425,24 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:47:10.535818Z",
-     "start_time": "2024-11-02T05:47:10.519265Z"
+     "end_time": "2024-11-02T05:50:51.764569Z",
+     "start_time": "2024-11-02T05:50:51.746103Z"
     }
    },
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 43
   },
   {
    "metadata": {
     "id": "M6f7JWZTm6tn",
     "ExecuteTime": {
-     "end_time": "2024-11-02T05:47:10.710331Z",
-     "start_time": "2024-11-02T05:47:10.569691Z"
+     "end_time": "2024-11-02T05:50:51.959910Z",
+     "start_time": "2024-11-02T05:50:51.815231Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "(\n",
+    "plot = (\n",
     "    ggplot(error_data, aes(x='Model Flexibility', y='Mean Squared Error', color='Dataset')) +\n",
     "    geom_line(aes(group='Dataset')) +\n",
     "    geom_point(size=3) +\n",
@@ -450,7 +450,9 @@
     "         x='Model Flexibility',\n",
     "         y='Mean Squared Error') +\n",
     "    theme_minimal()\n",
-    ")"
+    ")\n",
+    "# Explicitly display the plot\n",
+    "print(plot)"
    ],
    "outputs": [
     {
@@ -470,17 +472,14 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "<Figure Size: (640 x 480)>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 44
   },
   {
    "metadata": {},
