--- a/Practice_Activities/Practice_Activity_9.2/Practice_Activity_9_2.ipynb
+++ b/Practice_Activities/Practice_Activity_9.2/Practice_Activity_9_2.ipynb
@@ -88,142 +88,49 @@
    "metadata": {
     "id": "tZmjmGGQ1CaN",
     "ExecuteTime": {
-     "end_time": "2024-11-23T01:03:57.475493Z",
-     "start_time": "2024-11-23T01:03:57.469655Z"
+     "end_time": "2024-11-27T20:34:00.808167Z",
+     "start_time": "2024-11-27T20:34:00.387588Z"
     }
    },
    "outputs": [],
-   "execution_count": 109
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "ghXbwhv600-S",
     "ExecuteTime": {
-     "end_time": "2024-11-23T01:03:59.145828Z",
-     "start_time": "2024-11-23T01:03:57.494065Z"
+     "end_time": "2024-11-27T20:34:03.791672Z",
+     "start_time": "2024-11-27T20:34:02.266736Z"
     }
    },
    "source": "ha = pd.read_csv(\"https://www.dropbox.com/s/aohbr6yb9ifmc8w/heart_attack.csv?dl=1\")",
    "outputs": [],
-   "execution_count": 110
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-23T01:03:59.188650Z",
-     "start_time": "2024-11-23T01:03:59.182939Z"
+     "end_time": "2024-11-27T20:33:58.391135Z",
+     "start_time": "2024-11-27T20:33:58.121670Z"
     }
    },
    "cell_type": "code",
    "source": "ha.head()",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "   age  sex  cp  trtbps  chol  restecg  thalach  output\n",
-       "0   63    1   3     145   233        0      150       1\n",
-       "1   37    1   2     130   250        1      187       1\n",
-       "2   56    1   1     120   236        1      178       1\n",
-       "3   57    0   0     120   354        1      163       1\n",
-       "4   57    1   0     140   192        1      148       1"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>cp</th>\n",
-       "      <th>trtbps</th>\n",
-       "      <th>chol</th>\n",
-       "      <th>restecg</th>\n",
-       "      <th>thalach</th>\n",
-       "      <th>output</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>63</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>145</td>\n",
-       "      <td>233</td>\n",
-       "      <td>0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>130</td>\n",
-       "      <td>250</td>\n",
-       "      <td>1</td>\n",
-       "      <td>187</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>236</td>\n",
-       "      <td>1</td>\n",
-       "      <td>178</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120</td>\n",
-       "      <td>354</td>\n",
-       "      <td>1</td>\n",
-       "      <td>163</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>57</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>192</td>\n",
-       "      <td>1</td>\n",
-       "      <td>148</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ha' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mha\u001B[49m\u001B[38;5;241m.\u001B[39mhead()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'ha' is not defined"
+     ]
     }
    ],
-   "execution_count": 111
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
